<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_filters"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/checkbox_welsh_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welsh_available"
            android:layout_below="@+id/text_dialog_title"
            android:textSize="22sp"/>

        <View
            android:id="@+id/seperator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryAccent"
            android:layout_below="@+id/checkbox_welsh_available"/>

        <CheckBox
            android:id="@+id/checkbox_pharmacy_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seperator1"
            android:text="@string/pharmacy_open"
            android:textSize="22sp"/>

        <View
            android:id="@+id/seperator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryAccent"
            android:layout_below="@+id/checkbox_pharmacy_open"/>

        <TextView
            android:id="@+id/text_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:layout_below="@id/seperator2"
            android:textSize="24sp"/>

        <LinearLayout
            android:id="@+id/layout_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_services"
            android:orientation="vertical">

        </LinearLayout>
    </RelativeLayout>
</ScrollView>