<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textColor="?android:attr/textColorAlertDialogListItem"
        android:textSize="25sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/text_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/text_title"
        android:ems="10"
        android:minHeight="20dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_note"
        android:layout_below="@+id/text_note"
        android:background="@android:color/transparent"
        android:text="@string/save" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_note"
        android:layout_below="@+id/text_note"
        android:background="@android:color/transparent"
        android:text="@string/discard" />
</RelativeLayout>